<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="application_name" translatable="false">Droid-ify</string>
    <string name="cleartext_allowed" translatable="false">false</string>
    <string name="action_failed">Action failed</string>
    <string name="add_repository">Add repository</string>
    <string name="address">Address</string>
    <string name="all_applications">All apps</string>
    <string name="all_applications_up_to_date">All your apps are up-to-date</string>
    <string name="already_exists">Already exists</string>
    <string name="always">Always</string>
    <string name="amoled">Black</string>
    <string name="anti_features">Anti-features</string>
    <string name="application">App</string>
    <string name="application_not_found">App wasn\'t found</string>
    <string name="author_email">Author email</string>
    <string name="author_website">Author website</string>
    <string name="auto_update">Auto-update apps</string>
    <string name="auto_update_apps">Install updates automatically</string>
    <string name="available">Explore</string>
    <string name="bug_tracker">Bug tracker</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_open_link">Can\'t open link</string>
    <string name="cant_edit_sync_DESC">Can\'t edit repository while it\'s syncing</string>
    <string name="changelog">Changelog</string>
    <string name="changes">Changes</string>
    <string name="checking_repository">Checking repository…</string>
    <string name="cleanup_title">APK cleanup interval</string>
    <string name="compiled_for_debugging">Compiled for debugging</string>
    <string name="confirmation">Confirmation</string>
    <string name="connecting">Connecting…</string>
    <string name="contains_non_free_media">Contains non-free media</string>
    <string name="could_not_download_FORMAT">Couldn\'t download %s</string>
    <string name="could_not_sync_FORMAT">Couldn\'t sync %s</string>
    <string name="could_not_validate_FORMAT">Couldn\'t validate %s</string>
    <string name="credits">Credits</string>
    <string name="dark">Dark</string>
    <plurals name="days">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <string name="delete">Delete</string>
    <string name="delete_repository_DESC">Delete the repository?</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="donate">Donate</string>
    <string name="downloaded_FORMAT">Downloaded %s</string>
    <string name="downloading">Downloading</string>
    <string name="downloading_FORMAT">Downloading %s…</string>
    <string name="edit_repository">Edit</string>
    <string name="error_shizuku_service_unavailable">Shizuku/Sui service not running</string>
    <string name="error_shizuku_not_running_DESC">The Shizuku/Sui service isn\'t running</string>
    <string name="error_shizuku_not_granted">No Shizuku/Sui permission granted</string>
    <string name="error_shizuku_not_granted_DESC">The Shizuku/Sui permission hasn\'t been granted</string>
    <string name="error_shizuku_not_installed">Shizuku/Sui not installed</string>
    <string name="error_shizuku_not_installed_DESC">Shizuku/Sui isn\'t installed</string>
    <string name="import_export">Backup and restore</string>
    <string name="import_settings_title">Import favourites and settings</string>
    <string name="import_settings_DESC">Import settings and favourites from a file</string>
    <string name="export_settings_title">Export favourites and settings</string>
    <string name="export_settings_DESC">Export settings and favourites to a file</string>
    <string name="import_repos_title">Import repositories</string>
    <string name="import_repos_DESC">Import repositories from a file</string>
    <string name="export_repos_title">Export repositories</string>
    <string name="export_repos_DESC">Export repositories to a file</string>
    <string name="enable_repo">Enable repository</string>
    <string name="favourites">Favourites</string>
    <string name="file_format_error_DESC">Invalid file format</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="force_clean_up">Force cleanup</string>
    <string name="force_clean_up_DESC">Cleans up redundant files</string>
    <string name="has_advertising">Contains advertising</string>
    <string name="has_non_free_dependencies">Depends on other non-free apps</string>
    <string name="has_non_free_components">Has non-free components</string>
    <string name="has_security_vulnerabilities">Has known security vulnerabilities</string>
    <string name="has_tethered_network">Depends on a certain instance of a network service</string>
    <string name="home_screen_swiping">Page swiping</string>
    <string name="home_screen_swiping_DESC">Swipe left or right to switch the page</string>
    <plurals name="hours">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <string name="http_error_DESC">Invalid server response</string>
    <string name="socket_error_DESC">Server failed to provide new packet</string>
    <string name="connection_error_DESC">Couldn\'t connect to server</string>
    <string name="http_proxy">HTTP proxy</string>
    <string name="ignore_all_updates">Ignore new versions</string>
    <string name="ignore_this_update">Ignore this version</string>
    <string name="incompatible_api_DESC_FORMAT">Your %1$s (API version %2$d) is not supported. %3$s</string>
    <string name="incompatible_api_max_DESC_FORMAT">The maximum API version is %d</string>
    <string name="incompatible_api_min_DESC_FORMAT">The minimum API version is %d</string>
    <string name="incompatible_features_DESC">Missing features</string>
    <string name="incompatible_older_DESC">This version is older than the installed version on your device</string>
    <string name="incompatible_platforms_DESC_FORMAT">Your %1$s architecture isn\'t supported.
    Supported architectures: %2$s</string>
    <string name="incompatible_signature_DESC">This version is signed with a different signature than the one
    installed on your device</string>
    <string name="incompatible_version">Incompatible version</string>
    <string name="incompatible_versions">Incompatible versions</string>
    <string name="incompatible_versions_summary">Show app versions incompatible with the device</string>
    <string name="incompatible_with_FORMAT">Incompatible with %s</string>
    <string name="install">Install</string>
    <string name="install_types">Installation</string>
    <string name="installer">Installer</string>
    <string name="legacyInstallerComponent">Legacy installer component</string>
    <string name="delete_apk_on_install">Delete APK on install</string>
    <string name="delete_apk_on_install_summary">Automatically delete APK files after successful installation</string>
    <string name="unspecified">Unspecified</string>
    <string name="insufficient_storage">Insufficient space</string>
    <string name="insufficient_storage_DESC">There isn\'t enough free space to install this app</string>
    <string name="legacy_installer">Legacy installer</string>
    <string name="session_installer">Session installer</string>
    <string name="root_installer">Root installer</string>
    <string name="shizuku_installer">Shizuku/Sui installer</string>
    <string name="dhizuku_installer">Dhizuku installer</string>
    <string name="dhizuku_not_alive">Dhizuku isn\'t running</string>
    <string name="dhizuku_not_installed">Dhizuku isn\'t installed</string>
    <string name="error_dhizuku_service_unavailable">Dhizuku service not running</string>
    <string name="error_dhizuku_not_running_DESC">The Dhizuku service isn\'t running</string>
    <string name="error_dhizuku_not_granted">No Dhizuku permission granted</string>
    <string name="error_dhizuku_not_granted_DESC">The Dhizuku permission hasn\'t been granted</string>
    <string name="error_dhizuku_not_installed">Dhizuku not installed</string>
    <string name="error_dhizuku_not_installed_DESC">Dhizuku isn\'t installed</string>
    <string name="open_dhizuku">Open Dhizuku</string>
    <string name="shizuku_legacy_installer">Shizuku/Sui legacy installer</string>
    <string name="shizuku_not_alive">Shizuku/Sui isn\'t running</string>
    <string name="shizuku_not_installed">Shizuku/Sui isn\'t installed</string>
    <string name="installed">Installed</string>
    <string name="installing">Installing</string>
    <string name="uninstalling">Uninstalling</string>
    <string name="installation_failed">Installation failed</string>
    <string name="installation_failed_DESC">Failed to install %s</string>
    <string name="uninstalled_application">Uninstalled</string>
    <string name="uninstalled_application_DESC">%s has been uninstalled</string>
    <string name="uninstall_application_DESC">Uninstall %s?</string>
    <string name="integrity_check_error_DESC">Couldn\'t check integrity</string>
    <string name="invalid_address">Invalid address</string>
    <string name="invalid_fingerprint_format">Invalid fingerprint format</string>
    <string name="invalid_metadata_error_DESC">Invalid metadata</string>
    <string name="invalid_permissions_error_DESC">Invalid permissions</string>
    <string name="invalid_signature_error_DESC">Invalid signature</string>
    <string name="invalid_username_format">Invalid username format</string>
    <string name="io_error_DESC">Unable to perform certain actions</string>
    <string name="launch">Launch</string>
    <string name="license">License</string>
    <string name="license_FORMAT">%s license</string>
    <string name="light">Light</string>
    <string name="link_copied_to_clipboard">Link copied</string>
    <string name="links">Links</string>
    <string name="material_you">Material You</string>
    <string name="material_you_desc">Use Material You colours</string>
    <string name="merging_FORMAT">Merging %s</string>
    <string name="name">Name</string>
    <string name="network_error_DESC">Network error</string>
    <string name="never">Never</string>
    <string name="new_updates_available">New updates available</string>
    <plurals name="new_updates_DESC_FORMAT">
        <item quantity="one">%d app has available updates</item>
        <item quantity="other">%d apps have available updates</item>
    </plurals>
    <string name="no_applications_available">No available apps</string>
    <string name="no_applications_installed">No installed apps</string>
    <string name="no_description_available_DESC">No description available</string>
    <string name="no_matching_applications_found">No results</string>
    <string name="no_proxy">No proxy</string>
    <string name="notify_about_updates">Notify for updates</string>
    <string name="notify_about_updates_summary">Show a notification when a new app version is available</string>
    <string name="number_of_applications">Number of apps</string>
    <string name="ok">OK</string>
    <string name="only_compatible_with_FORMAT">Only compatible with %s</string>
    <string name="only_on_wifi">Only on Wi-Fi</string>
    <string name="only_on_wifi_with_charging">Only on Wi-Fi when charging</string>
    <string name="open_DESC_FORMAT">Open %s?</string>
    <string name="open_shizuku">Open Shizuku</string>
    <string name="other">Other</string>
    <string name="password">Password</string>
    <string name="proxy">Proxy</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="skip">Skip</string>
    <string name="sync_repositories">Sync repositories</string>
    <string name="updates">Updates</string>
    <string name="username">Username</string>
    <string name="prefs_personalization">Personalization</string>
</resources>