<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search_item"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/sync_repo"
        android:icon="@drawable/ic_sync"
        android:title="@string/sync_repositories" />
    <item
        android:id="@+id/sort_filter"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_filter" />
    <item
        android:id="@+id/favourites"
        android:icon="@drawable/ic_favourite"
        android:title="@string/favourites" />
    <item
        android:id="@+id/repos"
        android:icon="@drawable/ic_sync"
        android:title="@string/sync_repositories" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_sort"
        android:title="@string/settings" />
</menu>