<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.core.widget.NestedScrollView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            style="?materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="12dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:paddingVertical="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textNoSuggestions|textVisiblePassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fingerprint"
                    android:paddingVertical="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fingerprint"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:paddingVertical="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="username" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:paddingVertical="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="password"
                        android:inputType="textNoSuggestions|textVisiblePassword" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="KeyboardInaccessibleWidget">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            style="@style/Theme.Progress"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:text="@string/checking_repository"
            android:textAppearance="?textAppearanceHeadlineSmall" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skip"
            style="?materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/skip" />

    </LinearLayout>
</FrameLayout>
