<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.looker.droidify.ui.settings.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        style="?attr/appBarLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSurfaceContainer"
        app:elevation="0dp"
        app:liftOnScroll="false">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="?attr/toolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?colorSurfaceContainer"
            android:elevation="0dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/shape_margin_large"
                android:paddingEnd="@dimen/shape_margin_large"
                android:paddingTop="@dimen/shape_margin_large"
                android:text="@string/prefs_personalization"
                android:textAppearance="?textAppearanceHeadlineSmall"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <include
                android:id="@+id/language"
                layout="@layout/enum_type" />

            <include
                android:id="@+id/theme"
                layout="@layout/enum_type" />

            <include
                android:id="@+id/dynamic_theme"
                layout="@layout/switch_type" />

            <include
                android:id="@+id/home_screen_swiping"
                layout="@layout/switch_type" />

            <include
                android:id="@+id/clean_up"
                layout="@layout/enum_type" />

            <include
                android:id="@+id/force_clean_up"
                layout="@layout/enum_type"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/shape_margin_large"
                android:paddingEnd="@dimen/shape_margin_large"
                android:text="@string/updates"
                android:textAppearance="?textAppearanceHeadlineSmall"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <include
                android:id="@+id/auto_sync"
                layout="@layout/enum_type" />

            <include
                android:id="@+id/allow_background_work"
                layout="@layout/enum_type" />

            <include
                android:id="@+id/auto_update"
                layout="@layout/switch_type" />

            <include
                android:id="@+id/notify_updates"
                layout="@layout/switch_type" />

            <include
                android:id="@+id/unstable_updates"
                layout="@layout/switch_type" />

            <include
                android:id="@+id/ignore_signature"
                layout="@layout/switch_type" />

            <include
                android:id="@+id/incompatible_updates"
                layout="@layout/switch_type" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/shape_margin_large"
                android:paddingEnd="@dimen/shape_margin_large"
                android:text="@string/proxy"
                android:textAppearance="?textAppearanceHeadlineSmall"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <include
                android:id="@+id/proxy_type"
                layout="@layout/enum_type" />

            <include
                android:id="@+id/proxy_host"
                layout="@layout/enum_type" />

            <include
                android:id="@+id/proxy_port"
                layout="@layout/enum_type" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/shape_margin_large"
                android:paddingEnd="@dimen/shape_margin_large"
                android:text="@string/install_types"
                android:textAppearance="?textAppearanceHeadlineSmall"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <include
                android:id="@+id/installer"
                layout="@layout/enum_type" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/shape_margin_large"
                android:paddingEnd="@dimen/shape_margin_large"
                android:text="@string/import_export"
                android:textAppearance="?textAppearanceHeadlineSmall"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <include
                android:id="@+id/export_settings"
                layout="@layout/enum_type" />

            <include
                android:id="@+id/import_settings"
                layout="@layout/enum_type" />

            <include
                android:id="@+id/export_repos"
                layout="@layout/enum_type" />

            <include
                android:id="@+id/import_repos"
                layout="@layout/enum_type" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/shape_margin_large"
                android:paddingEnd="@dimen/shape_margin_large"
                android:text="@string/credits"
                android:textAppearance="?textAppearanceHeadlineSmall"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <include
                android:id="@+id/credit_foxy"
                layout="@layout/enum_type" />

            <include
                android:id="@+id/droidify"
                layout="@layout/enum_type" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
